Add Retina Logo & more issues (#268)
* Retina logo

* Smaller image

* Mobile render bug .teams img

* Fixes issues #269

* Allow linking to contributor + focus

See #264

* Clean up outlining of contributor

--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -9,7 +9,7 @@
 {% block content%}
   {% block header %}
     <header class="alt-bg">
-      <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive" /></a>
+      <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive" srcset="/static/images/logo@2x.png 2x" /></a>
       <nav>
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Table of Contents</a>
         <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributors</a>
@@ -45,8 +45,8 @@
             </a>
           </div>
           {{ language_switcher() }}
-        </nav>
-      </div>
+        </div>
+      </nav>
     </header>
   {% endblock %}
 
@@ -54,7 +54,7 @@
 
   {% block footer %}
     <footer class="alt-bg">
-      <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive"/></a>
+      <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive" srcset="/static/images/logo@2x.png 2x" /></a>
       <a class="navigation-logo ha-logo" href="https://httparchive.org">
         <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
       </a>
