--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -25,7 +25,7 @@
 }
 .team img {
   height: 200px;
-  width: auto;
+  width: 200px;
 }
 .contributors {
   margin: 0 0 100px 0;
@@ -99,12 +99,17 @@
   margin: 15px;
 }
 
+.contributor:focus .contributor-avatar{
+    transform: scale(1.1);
+}
+
 .contributor-avatar {
   border-radius: 50px;
   background-color: #f7f779;
   margin-bottom: 10px;
   width: 100px;
   height: auto;
+  transition-duration: .3s;
 }
 
 .contributor-name {
@@ -112,11 +117,10 @@
   font-style: italic;
   font-size: 18px;
   margin-bottom: 10px;
-  flex: 1
 }
 
 .contributor-social {
-  margin-bottom: 10px;
+  flex: 1
 }
 
 .contributor-social img {
@@ -126,6 +130,7 @@
 }
 
 .contributor-teams {
+  margin-top: 5px;
   text-align: center;
 }
 
@@ -157,7 +162,10 @@
   }
   .team img {
      width: 100px;
-     height: auto;
+     height: 100px;
+  }
+  .filter-container {
+      margin: 0;
   }
 
   {% for id in config.teams.keys() %}
@@ -168,7 +176,7 @@
 
   .contributor {
     flex: 1;
-    display: grid;
+    display: none;/* will be set to grid */
     grid-template-columns: 100px 3fr;
     grid-column-gap: 10px;
     grid-row-gap: 0;
@@ -230,10 +238,10 @@
 
     <div class="contributor-grid">
     {% for id, contributor in config.contributors.items() %}
-      <div class="contributor {{ ' '.join(contributor.teams) }}">
+      <div class="contributor {{ ' '.join(contributor.teams) }}" id="{{ id }}" tabindex="0">
         <img class="contributor-avatar" src="{{contributor.avatar_url}}" height="100" width="100" alt="{{ contributor.name }} avatar" loading="lazy">
         <div class="contributor-name">{{ contributor.name }}</div>
-        {% if contributor.twitter or contributor.github or contributor.website %}
+
         <div class="contributor-social">
           {% if contributor.github %}
           <a href="https://github.com/{{ contributor.github }}" target="_blank" title="{{ contributor.github }} on GitHub"><img src="/static/images/github.png" alt="GitHub"></a>
@@ -245,7 +253,7 @@
           <a href="{{ contributor.website }}" target="_blank" title="{{ contributor.name }} website"><img src="/static/images/blog.png" alt="website"></a>
           {% endif %}
         </div>
-        {% endif %}
+
         <div class="contributor-teams">
           {% for id in contributor.teams | sort() %}
             <span class="contributor-team team-{{ id }}">{{ config.teams[id].name }}</span>
@@ -261,43 +269,51 @@
 {% block scripts %}
   {{ super() }}
   <script nonce="{{ csp_nonce() }}">
-var teams = ['{{ "','".join(config.teams.keys()) | safe }}'];
-var buttons = document.querySelectorAll('.filter-container button');
-var contributors = document.querySelector('.contributors');
-var contributorsGrid = document.querySelector('.contributor-grid');
-var counter = document.querySelector('#filtered-contributors');
+(function loaded() {
+    var teams = ['{{ "','".join(config.teams.keys()) | safe }}'];
+    var buttons = document.querySelectorAll('.filter-container button');
+    var contributors = document.querySelector('.contributors');
+    var contributorsGrid = document.querySelector('.contributor-grid');
+    var counter = document.querySelector('#filtered-contributors');
 
-contributorsGrid.setAttribute('data-rendered', true);
+    contributorsGrid.setAttribute('data-rendered', true);
 
-function getFilteredContributorCount() {
-  return Array.from(document.querySelectorAll('.contributor')).filter(function(el) {
-    return getComputedStyle(el).display != 'none';
-  }).length;
-}
-
-for (var i = 0; i < buttons.length; i++) {
-  var button = buttons[i];
-  button.addEventListener('click', function(e) {
-    var teamId = e.target.className;
-
-    //on first filter, hide all except that one
-    if(contributors.classList.length == (teams.length + 1)) {
-        teams.forEach(function(team) {
-            if(team === teamId) {
-                return;
-            }
-            document.querySelector('.' + team).classList.toggle(team);
-        });
-    } else if (contributors.classList.length == 2 && contributors.classList.contains(teamId)) {
-        teams.forEach(function(team) {
-            contributors.classList.add(team);
-        });
-    } else {
-        contributors.classList.toggle(teamId);
+    function getFilteredContributorCount() {
+      return Array.from(document.querySelectorAll('.contributor')).filter(function(el) {
+        return getComputedStyle(el).display != 'none';
+      }).length;
     }
-    counter.innerText = getFilteredContributorCount();
-  });
-}
+
+    for (var i = 0; i < buttons.length; i++) {
+      var button = buttons[i];
+      button.addEventListener('click', function(e) {
+        var teamId = e.target.className;
+
+        if(contributors.classList.length == (teams.length + 1)) {
+            teams.forEach(function(team) {
+                if(team === teamId) {
+                    return;
+                }
+                document.querySelector('.' + team).classList.toggle(team);
+            });
+        } else if (contributors.classList.length == 2 && contributors.classList.contains(teamId)) {
+            teams.forEach(function(team) {
+                contributors.classList.add(team);
+            });
+        } else {
+            contributors.classList.toggle(teamId);
+        }
+        counter.innerText = getFilteredContributorCount();
+      });
+    }
+
+    if(document.location.hash.length > 0) {
+        var highlight = document.querySelector('#' + document.location.hash.substr(1));
+        if(highlight) {
+            highlight.focus();
+        }
+    }
+})();
 
   </script>
 {% endblock %}
