SEO fixes for canonical and meta info (inc Meta Descriptions, OG, Twitter and Article Structured Data) (#302)
* Add Description for HTTP/2 chapter

* Add Descriptions (inc Meta,OG and Twitter)

* Update PWA Chapter

* Make OG and Twitter absolute image paths as they do not support relative paths

* Add og.url and better way of doing canonical

* Fix Structured Data Errors

* Make Published and Last Update date part of chapter meta data

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -1,8 +1,6 @@
 {% extends "en/2019/base.html" %}
 
-{% block title %}
-{{ metadata.get('title') }} | 2019 | The Web Almanac by HTTP Archive
-{% endblock %}
+{% block title %}{{ metadata.get('title') }} | 2019 | The Web Almanac by HTTP Archive{% endblock %}
 
 {% block styles %}
 {{ super() }}
