Added a section for author bios, and updated the bios from #239. (#314)

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -47,6 +47,11 @@
                       {{ authordata.tagline }}
                   </div>
               {% endif %}
+              {% if authordata.bio %}
+              <div class="bio">
+                  {{ authordata.bio | safe }}
+              </div>
+          {% endif %}
           </div>
       </li>
     {% else %}
