--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -20,6 +20,14 @@
 <meta name="twitter:description" content="{{ self.description() }}">
 
 <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "https://almanac.httparchive.org",
+    "logo": "https://almanac.httparchive.org/static/images/ha.png"
+  }
+  </script>
+  <script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
 	  "@type": "Article",
