Change HTTP Archive name in Structured Data (#325)
* Change Organization Name

* Correct name again

--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -42,7 +42,7 @@
 	  },
 	  "publisher": {
 	  	  "@type": "Organization",
-	  	  "name": "HTTPArchive",
+	  	  "name": "Web Almanac by HTTP Archive",
 	  	  "logo": {
 	  	      "@type": "ImageObject",
 	  	      "url": "https://almanac.httparchive.org/static/images/ha.png",
