--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -10,6 +10,8 @@
 <meta property="og:title" content="{{ self.title() }}">
 <meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint, **get_view_args(lang=language.lang_code, year=year)) }}">
 <meta property="og:image" content="https://almanac.httparchive.org/static/images/methodology-characters.png">
+<meta property="og:image:height" content="354">
+<meta property="og:image:width" content="984">
 <meta property="og:type" content="article">
 <meta property="og:description" content="{{ self.description() }}">
 
@@ -30,7 +32,9 @@
 	  "headline": "{{ self.title() }}",
 	  "image": {
 	  	  "@type": "ImageObject",
-	  	  "url": "https://almanac.httparchive.org/static/images/methodology-characters.png"
+	  	  "url": "https://almanac.httparchive.org/static/images/methodology-characters.png",
+	  	  "height": 354,
+	  	  "width": 984
 	  },
 	  "publisher": {
 	  	  "@type": "Organization",
