Editing Mobile Web chapter (#305)
* first pass of edits

* round two

* mweb edits

* big number, more edits

* .

* emdash

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -111,10 +111,10 @@ table,
 .content .intro p {
   font-weight: bold;
 }
-.content li {
-  list-style: none;;
+.content ul li {
+  list-style: none;
 }
-.content li::before {
+.content ul li::before {
   content: "•";
   font-size: 16px;
   color: #a9cbbb;
@@ -143,18 +143,18 @@ table,
 .authors,.authors h4{
   border-bottom: 1px solid #1A2B490A;
 }
-.authors ul{
+.content .authors ul{
   margin:16px 0;
   padding:0;
 }
 
-.authors li::before{
+.content .authors li::before{
   content: none;
   width: 0;
   margin-left: 0;
 }
 
-.authors li{
+.content .authors li{
   list-style: none;
   margin: 0;
   padding: 0;
@@ -245,6 +245,20 @@ table,
 figure {
   max-width: 100%;
 }
+figure {
+  display: flex;
+  flex-direction: column;
+  margin: 15px -8px;
+  padding: 8px;
+  font-style: italic;
+  overflow-x: auto;
+}
+figure > p {
+  display: inline-block;
+}
+figure > a {
+  margin: 0 auto;
+}
 figure img {
   margin: 0 auto;
   border-radius: 8px;
@@ -254,13 +268,8 @@ figure iframe {
   display: block;
   margin: 0 auto;
 }
-figure {
-  margin: 15px -8px;
-  padding: 8px;
-  font-style: italic;
-  overflow-x: auto;
-}
 figcaption {
+  margin-top: 20px;
   text-align: center;
 }
 
@@ -276,8 +285,16 @@ thead {
 th, td {
   padding: 10px;
 }
+th.numeric, td.numeric {
+  text-align: right;
+}
 tbody tr:nth-child(even) {
   background-color: #f2f2f280;
+}
+figure .big-number {
+  text-align: center;
+  font: bold 8rem/1em Poppins, sans-serif;
+  color: #a8caba;
 }
 
 @media (max-width: 900px) {
@@ -335,5 +352,11 @@ tbody tr:nth-child(even) {
     border-top: 1px solid #1A2B490A;
     max-height: 100%;
     transition: max-height 0.25s ease-in;
+  }
+}
+
+@media (max-width: 600px) {
+  figure .big-number {
+    font-size: 5rem;
   }
 }
